force-app/main/default/objects/CCXR_Restaurant__c/CCXR_Restaurant__c.object-meta.xml
<CustomObject>
    <label>CCXR_Restaurant</label>
    <nameField>
        <label>CCXR_Restaurant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCXR_Restaurants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>