force-app/main/default/objects/CCXR_Restaurant__c/fields/CCXR_Image__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Image__c</fullName>
    <label>CCXR_Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>