force-app/main/default/objects/CCXR_Restaurant__c/fields/CCXR_Landmarks__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Landmarks__c</fullName>
    <label>CCXR_Landmarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>