force-app/main/default/objects/CCXR_Restaurant__c/fields/CCXR_Location__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Location__c</fullName>
    <label>CCXR_Location</label>
    <scale>1</scale>
    <type>Location</type>
</CustomField>